Fix mastodon link wrapping around

--- a/main.css
+++ b/main.css
@@ -16,6 +16,7 @@ img {
 .intro {
     margin-top: 17vh;
     width: 325px;
+    white-space: nowrap;<a>
 }
 
 .avatar {
